test/testData/parser/negative/typedefInit.c

typedef int tl = 10;

void testf(int i) {
  typedef int l = i;
}

